# kafka_flink_hologres

./: README.md  config.yaml  pyproject.toml
demo/: flinksql_demo  prompt  topic_data
discuss/: 01-需求文档.md  02-数据库设计.md  03-接口设计-简化版.md  03-接口设计（已废弃）.md  04-实现方案-简化版-修正.md  04-实现方案-简化版（已废弃）.md  04-实现方案（已废弃）.md  aliyun_flink_integration_plan.md  aliyun_flink_integration_plan_simple.md
docs/: project_summary.md  user_guide.md
logs/: taskmanager_job-ed8ee91c-babf-45d7-b18e-f5ddfbc1a0eb-taskmanager-1-1_log.txt
scripts/: init_database.sql  run.sh
src/kafka_flink_tool/: __init__.py  cli.py  config.py  database.py  ddl_generator.py  flink_client.py  kafka_client.py  logger.py  models.py  service.py  sql_generator.py  type_inference.py
tests/: test_flink_client.py
